--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,7 +90,7 @@ dependencies {
     implementation 'com.google.accompanist:accompanist-pager:0.27.1'
 
     //Preferences DataStore
-    implementation 'androidx.datastore:datastore-preferences:1.0.0'
+    implementation "androidx.datastore:datastore-preferences:$data_store_version"
 }
 
 // Allow references to generated code
