--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         room_version = '2.4.3'
         retrofit_version = '2.9.0'
         hilt_version = '2.44'
+        data_store_version = '1.0.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
