--- a/webapi/CoffeeBrewer/appsettings.json
+++ b/webapi/CoffeeBrewer/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=./Database/CoffeeBrewer.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
