--- a/webapi/CoffeeBrewer/appsettings.json
+++ b/webapi/CoffeeBrewer/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=./Database/CoffeeBrewer.db"
+    "DefaultConnection": "Data Source=./CoffeeBrewer.db"
   },
   "Logging": {
     "LogLevel": {
